--- a/S2_P2_AN2.tex
+++ b/S2_P2_AN2.tex
@@ -1182,6 +1182,8 @@ We will start by considering rectangular domains of the form $D = [a, b] \times 
     We will only consider rectangles with $a \leq b, c \leq d$.
 \end{remark}
 
+\subsection{Theorems}
+
 \begin{proposition}[continuity implies integrability]
     Let $D=[a, b] \times [c, d]$ and $f : D \to \R$ continuous.
     Then $f$ is Riemann integrable over $D$.
@@ -1243,6 +1245,8 @@ We will start by considering rectangular domains of the form $D = [a, b] \times 
         \item (monotonicity) If $f \leq g$ over $D$ then $\iint_D f \leq \iint_D g$
     \end{enumerate}
 \end{proposition}
+
+\subsection{Fubini's theorem}
 
 \begin{theorem}[Fubini's theorem for rectangles]
     Let $D = [a, b] \times [c, d]$ and $f: D \subseteq \R^2 \to \R$ continuous.
@@ -1332,5 +1336,66 @@ We will start by considering rectangular domains of the form $D = [a, b] \times 
         \iint_D f(x, y) \dd{x} \dd{y} = \int_a^b \left(\int_{\varphi(x)}^{\psi(x)} f(x, y) \dd{y}\right) \dd{x}
     \end{equation}
 \end{theorem}
+
+\subsection{Change of variable}
+
+\begin{theorem}
+    Let $\varphi: \tilde{U} \subseteq \R^2 \to D \subseteq \R^2$ with $\tilde{U}$ open, $\varphi$ of class $C^1$ and injective over $\tilde{U}$.
+    Let $U$ be a Jordan measurable domain included in $\tilde{U}$.
+    Define $D = \varphi(U)$.
+    Assume that $J_\varphi (u,v)$ is invertible for any $(u, v) \in U$.
+    Then $D$ is Jordan measurable and for any continuous function $f:D \to \R$
+    \begin{equation}
+        \iint_D f(x, y) \dd{x}\dd{y} = \iint_U f(\varphi(u, v)) \abs{\det J_{\varphi}(u, v)} \dd{u} \dd{v}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    This is just the idea of the proof.
+
+    Consider $R_{ij}$ the rectangles that partition $U$, with $i \in \{1, \ldots,N\}, j \in \{1, \ldots,M\}$.
+    We have that
+    \begin{equation}
+        \int_D f(x, y) \dd{x} \dd{y} \approx \sum_{i,j} f_{ij} \mathscr A (\varphi(R_{ij}))
+    \end{equation}
+    then each area is approximately equal to the area given by the parallelogram given by the linear approximations.
+    We have that the two sides of the parallelogram will be
+    \begin{gather}
+        (u_i - u_{i-1}) \pdv{\varphi}{u}()(u_{i-1}, v_{j-1})
+        (v_j, v_{j-1}) \pdv{\varphi}{v}()(u_{i-1}, v_{j-1}) \\
+    \end{gather}
+    and we know that the area of the parallelogram can be calculated with the determinant:
+    \begin{align}
+        \mathscr A(\varphi(R_{ij})) & = \abs{\det \begin{pmatrix}
+                                                          (u_i - u_{i-1}) \pdv{\varphi}{u}()(u_{i-1}, v_{j-1}) \\
+                                                          (v_j, v_{j-1}) \pdv{\varphi}{v}()(u_{i-1}, v_{j-1})
+                                                      \end{pmatrix}}               \\
+                                    & = (v_j, v_{j-1})(u_i - u_{i-1}) \abs{\det \begin{pmatrix}
+                                                                                        \pdv{\varphi}{u}()(u_{i-1}, v_{j-1}) \\
+                                                                                        \pdv{\varphi}{v}()(u_{i-1}, v_{j-1})
+                                                                                    \end{pmatrix}} \\
+                                    & = \mathscr A(R_{ij}) \abs{\det J_\varphi}
+    \end{align}
+
+    Then we can write
+    \begin{align}
+        \int_D f(x, y) \dd{x} \dd{y} & \approx \sum_{i,j} f_{ij} \mathscr A (\varphi(R_{ij}))                         \\
+                                     & \approx \sum_{i,j} f_{ij} \mathscr A(R_{ij}) \abs{\det J_\varphi}              \\
+                                     & \approx \sum_{i,j} f(\varphi(u_i, v_j)) \abs{\det J_\varphi}\mathscr A(R_{ij}) \\
+                                     & \approx \int_U f(\varphi(u_i, v_j)) \abs{\det J_\varphi} \dd{u} \dd{v}
+    \end{align}
+\end{proof}
+
+\begin{corollary}[linear $\varphi$]
+    Let $M$ be a $2\times 2$ invertible matrix.
+    Let $U \subseteq \R^2$ Jordan measurable and $D = \left\{ M \begin{pmatrix} u \\ v\end{pmatrix}, (u, v) \in U \right\}$.
+    Then for any $f: D \to \R$ continuous
+    \begin{equation}
+        \iint_D f(x, y) \dd{x}\dd{y} = \abs{\det M} \iint_D f\left(M\begin{pmatrix} u \\ v\end{pmatrix}\right) \dd{u} \dd{v}
+    \end{equation}
+\end{corollary}
+\begin{proof}
+    Let $\varphi(u, v) = M\begin{pmatrix} u \\ v\end{pmatrix}$. Then $J_\varphi(u, v) = M$ for any $(u, v)$.
+    So $abs{\det J_\varphi (u, v)} = \abs{\det M}$ and we can apply the theorem.
+\end{proof}
 
 \end{document}
