--- a/S2_P2_CS2.tex
+++ b/S2_P2_CS2.tex
@@ -766,7 +766,7 @@ By plotting the constraints on a graph we get an area bounded by the constraints
 Within this area we have to choose the point that maximizes $z$.
 The optimal point will be on the boundary of this area, therefore there will be some constraints that will be used up to the very limit: we call those \say{maxed out} constraints \textit{binding}.
 
-\subsection{Mathematical represenation}
+\subsection{Mathematical representation}
 
 This whole problem can be expressed in terms of of linear algebra and matrix multiplications (yay).
 
